fix(stylus): enable nest scrollbar pointer events

--- a/src/style/smooth_scrollbar.styl
+++ b/src/style/smooth_scrollbar.styl
@@ -17,6 +17,9 @@ scrollbar
     .scroll-content
       pointer-events: none
 
+      .scroll-content
+        pointer-events: auto
+
   .scrollbar-track
     position: absolute
     opacity: 0
